# streamdeck-python-sdk-cli

./: README-PYPI.md  README.md  pyproject.toml
src/streamdeck_sdk_cli/executable/: executable.py
src/streamdeck_sdk_cli/executable/assets/base_project/com.bestdeveloper.mytestplugin.sdPlugin/: run.bat
src/streamdeck_sdk_cli/executable/assets/base_project/com.bestdeveloper.mytestplugin.sdPlugin/code/: requirements.txt
src/streamdeck_sdk_cli/executable/assets/base_project/com.bestdeveloper.mytestplugin.sdPlugin/property_inspector/: myaction_pi.py
